--- a/crates/ordinator-api-server/Cargo.toml
+++ b/crates/ordinator-api-server/Cargo.toml
@@ -4,3 +4,22 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+actix-files = "*"
+actix-rt = "*"
+actix-web = "*"
+anyhow = "*"
+bincode = "*"
+chrono = { version = "*", features = ["serde"] }
+chrono-tz = "*"
+dotenvy = "*"
+proptest = "*"
+serde = { version = "*", features = ["derive"] } 
+serde_json = "*"
+ordinator-orchestrator = { path = "../ordinator-orchestrator" }
+tokio = "*"
+toml = "*"
+tracing = "*"
+tracing-appender = "*"
+tracing-flame = "*"
+tracing-serde = "0.2"
+tracing-subscriber = { version = "*", features = ["json", "env-filter"] }
