--- a/crates/ordinator-orchestrator/Cargo.toml
+++ b/crates/ordinator-orchestrator/Cargo.toml
@@ -4,3 +4,8 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+ordinator-actors = { path = "../ordinator-actors" }
+ordinator-contracts = { path = "../ordinator-contracts" }
+ordinator-scheduling-environment = { path = "../ordinator-scheduling-environment" }
+anyhow = { workspace = true }
+
