--- a/crates/ordinator-configuration/Cargo.toml
+++ b/crates/ordinator-configuration/Cargo.toml
@@ -4,3 +4,13 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+ordinator-scheduling-environment = { path = "../ordinator-scheduling-environment" }
+
+anyhow = { workspace = true}
+chrono = {workspace = true}
+dotenvy = {workspace = true}
+rand = {workspace = true}
+rgb = {workspace = true}
+serde = { workspace = true }  
+serde_json = { workspace = true }
+toml = {workspace = true}
