--- a/crates/ordinator-scheduling-environment/Cargo.toml
+++ b/crates/ordinator-scheduling-environment/Cargo.toml
@@ -4,3 +4,19 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+anyhow = {workspace = true}
+chrono = { workspace = true}
+chrono-tz = "*"
+clap = { version = "*", features = ["derive"] }
+colored ="*"
+proptest = "*"
+regex = "*"
+rust_decimal = "*"
+rust_decimal_macros = "*"
+rust_xlsxwriter = "*"
+serde = { version = "*", features = ["derive"] }
+serde_json = "*"
+serde_json_any_key = "*"
+strum = "*"
+strum_macros = "*"
+toml = "*"
