--- a/crates/ordinator-total-data-processing/Cargo.toml
+++ b/crates/ordinator-total-data-processing/Cargo.toml
@@ -1,13 +1,15 @@
 [package]
 name = "data_processing"
 version = "0.2.2"
-edition = "2021"
+edition = "2024"
 description = "Data processing crate for interacting with SAP"
 license-file = "../LICENSE"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+ordinator-configuration = {path = "../ordinator-configuration"}
+ordinator-scheduling-environment = { path = "../ordinator-scheduling-environment" }
 anyhow = "*"
 atoi = "=1.0.0"
 calamine = "*"
@@ -20,7 +22,6 @@ regex = "*"
 rust_decimal = "*"
 rust_xlsxwriter = "*"
 serde = { version = "*", features = [ "derive" ]}
-shared_types = { path = "../shared_types" }
 thiserror = "*"
 toml = "*"
 tracing = "*"
