preparetion for mock api. Only `ordinator-api-server` is functioning

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ chrono = { version = "*", features = ["serde"] }
 chrono-tz = "*"
 colored = "*"
 dotenvy = "*"
+flume = "*"
 itertools ="*"
 rand = "*"
 rgb = "*"
