--- a/crates/ordinator-api-server/Cargo.toml
+++ b/crates/ordinator-api-server/Cargo.toml
@@ -8,18 +8,18 @@ actix-files = "*"
 actix-rt = "*"
 actix-web = "*"
 anyhow = "*"
-bincode = "*"
-chrono = { version = "*", features = ["serde"] }
-chrono-tz = "*"
+# bincode = "*"
+# chrono = { version = "*", features = ["serde"] }
+# chrono-tz = "*"
 dotenvy = "*"
-proptest = "*"
+# proptest = "*"
 serde = { version = "*", features = ["derive"] } 
 serde_json = "*"
-ordinator-orchestrator = { path = "../ordinator-orchestrator" }
+# ordinator-orchestrator = { path = "../ordinator-orchestrator" }
 tokio = "*"
-toml = "*"
+# toml = "*"
 tracing = "*"
-tracing-appender = "*"
-tracing-flame = "*"
-tracing-serde = "0.2"
-tracing-subscriber = { version = "*", features = ["json", "env-filter"] }
+# tracing-appender = "*"
+# tracing-flame = "*"
+# tracing-serde = "0.2"
+# tracing-subscriber = { version = "*", features = ["json", "env-filter"] }
