--- a/.env.example
+++ b/.env.example
@@ -1,39 +1,33 @@
-# THROTTLING
-STRATEGIC_THROTTLING=0
-TACTICAL_THROTTLING=0
-SUPERVISOR_THROTTLING=100
-OPERATIONAL_THROTTLING=150
+# QUESTION
+# Should an asset be chosen here? I do not think so 
 # CHOOSE Asset
 ASSET=DF
 
 # Ordinator
-ORDINATOR_API_ADDRESS=0.0.0.0:8090
+ORDINATOR_API_ADDRESS=127.0.0.1:8090
 ORDINATOR_MAIN_ENDPOINT=/ordinator_endpoint
 ORDINATOR_CORES=2-8
 ORDINATOR_PATH=/home/$USER/ordinator
-OUTPUT_PATH=
-
-# Imperium (CHANGE THIS DEPENDING ON WHERE IMPERIUM IS LOCATED)
-IMPERIUM_ADDRESS=127.0.0.1:8090
-IMPERIUM_PATH=./target/release/imperium
 
 # Debugging
-RUST_BACKTRACE=1
+RUST_BACKTRACE=0
 
 # Logging & Tracing
 PROFILING_FILE=./benches/tracing.folded
 RUST_LOG=info
 PROFILING_LEVEL=error
-TRACING_LEVEL=error
+TRACING_LEVEL=info
 ORDINATOR_LOG_DIR=./logging/logs/
 
 
 #=================================================================================#
 # THESE SETTINGS ARE NOT ENVIRONMENT VARIABLES, DO NOT CHANGE THEM
+
+# This should not be needed anymore. You should simply load them in.
 # Configuration
-WORK_ORDER_WEIGHTINGS=./configuration/work_order_weight_parameters.json
-CLUSTER_WEIGHTINGS=./configuration/strategic_clustering_parameters.json
-RESOURCE_CONFIG_INITIALIZATION=./configuration/resources_df.toml
+# WORK_ORDER_WEIGHTINGS=./configuration/work_order_weight_parameters.json
+# CLUSTER_WEIGHTINGS=./configuration/strategic_clustering_parameters.json
+# RESOURCE_CONFIG_INITIALIZATION=./configuration/resources_test.toml
 
 #DATA
 DATABASE_PATH=./temp_scheduling_environment_database/scheduling_environment.json
