--- a/crates/ordinator-orchestrator/Cargo.toml
+++ b/crates/ordinator-orchestrator/Cargo.toml
@@ -4,8 +4,9 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-ordinator-actors = { path = "../ordinator-actors" }
+ordinator-actor-core = { path = "../ordinator-actors/ordinator-actor-core" }
 ordinator-contracts = { path = "../ordinator-contracts" }
+ordinator-orchestrator-actor-traits = {path = "../ordinator-orchestrator-actor-traits"}
 ordinator-scheduling-environment = { path = "../ordinator-scheduling-environment" }
 anyhow = { workspace = true }
 
