--- a/crates/ordinator-contracts/Cargo.toml
+++ b/crates/ordinator-contracts/Cargo.toml
@@ -5,6 +5,9 @@ edition = "2024"
 
 [dependencies]
 ordinator-scheduling-environment = { path = "../ordinator-scheduling-environment"}
+
 anyhow={ workspace = true}
 chrono = { workspace = true}
+clap = {workspace =true}
 serde = {workspace=true}
+toml = {workspace=true}
