--- a/crates/ordinator-actors/ordinator-strategic-actor/Cargo.toml
+++ b/crates/ordinator-actors/ordinator-strategic-actor/Cargo.toml
@@ -8,12 +8,14 @@ ordinator-actor-core = {path = "../ordinator-actor-core"}
 ordinator-orchestrator-actor-traits = {path = "../../ordinator-orchestrator-actor-traits"}
 ordinator-scheduling-environment = {path = "../../ordinator-scheduling-environment"}
 ordinator-configuration = {path = "../../ordinator-configuration"}
+ordinator-contracts = {path = "../../ordinator-contracts"}
 
 anyhow = { workspace = true}
 arc-swap = {workspace = true}
 colored = {workspace = true}
 chrono = {workspace = true}
 itertools = {workspace = true}
+priority-queue = {workspace = true}
 proptest = {workspace = true}
 rand = {workspace = true}
 serde = {workspace = true}
