--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,6 +40,7 @@ colored = "*"
 dotenvy = "*"
 flume = "*"
 itertools ="*"
+mockall = "*"
 priority-queue = "*"
 proptest ="*"
 rand = "*"
@@ -49,3 +50,4 @@ serde_json = "*"
 tokio = "*"
 toml = "*"
 tracing = "*"
+
