--- a/crates/ordinator-actors/ordinator-operational-actor/Cargo.toml
+++ b/crates/ordinator-actors/ordinator-operational-actor/Cargo.toml
@@ -20,3 +20,6 @@ proptest = {workspace = true}
 rand = {workspace = true}
 serde = {workspace = true}
 tracing = {workspace = true}
+
+[dev-dependencies]
+mockall = {workspace = true}
