--- a/crates/ordinator-configuration/Cargo.toml
+++ b/crates/ordinator-configuration/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 ordinator-scheduling-environment = { path = "../ordinator-scheduling-environment" }
 
 anyhow = { workspace = true}
+arc-swap = {workspace = true}
 chrono = {workspace = true}
 dotenvy = {workspace = true}
 rand = {workspace = true}
