--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,12 @@
 [workspace]
 resolver = "2"
 members = [
-    "crates/ordinator-actors/ordinator-actor-core", "crates/ordinator-actors/ordinator-actor-factories",
+    "crates/ordinator-actors/ordinator-actor-core",
     "crates/ordinator-actors/ordinator-operational-actor",
     "crates/ordinator-actors/ordinator-strategic-actor",
     "crates/ordinator-actors/ordinator-supervisor-actor",
     "crates/ordinator-actors/ordinator-tactical-actor",
+
     "crates/ordinator-api-server",
     "crates/ordinator-configuration",
     "crates/ordinator-contracts",
@@ -21,7 +22,6 @@ members = [
 
 [profile.dev]
 panic = 'abort'
-force-frame-pointers = true
 debug = true
 
 [profile.release]
@@ -51,4 +51,6 @@ strum = "*"
 tokio = "*"
 toml = "*"
 tracing = "*"
-
+tracing-appender = "*"
+tracing-flame = "*"
+tracing-subscriber = "*"
