moved towards relying on the SchedulingEnvironment more

--- a/temp_scheduling_environment_database/actor_specifications/actor_specification_hb.toml
+++ b/temp_scheduling_environment_database/actor_specifications/actor_specification_hb.toml
@@ -6,12 +6,24 @@ strategic_options.urgency_weight = 1
 strategic_options.resource_penalty_weight = 1000000
 strategic_options.clustering_weight = 1000
 
+material_to_period.nmat = 0
+material_to_period.smat = 0
+material_to_period.cmat = 2
+material_to_period.pmat = 3
+material_to_period.wmat = 3
+
 [tactical]
 id = "tactical"
 asset = "Df"
 tactical_options.number_of_removed_work_orders = 25
 tactical_options.urgency = 1
 tactical_options.resource_penalty = 10000000
+
+material_to_period.nmat = 0
+material_to_period.smat = 0
+material_to_period.cmat = 2
+material_to_period.pmat = 3
+material_to_period.wmat = 3
 
 # Resources are here given in people
 mtnelec = 1.5
