--- a/temp_scheduling_environment_database/actor_specifications/actor_specification_test.toml
+++ b/temp_scheduling_environment_database/actor_specifications/actor_specification_test.toml
@@ -1,3 +1,16 @@
+[time_input]
+number_of_strategic_periods = 52
+number_of_tactical_periods = 4
+number_of_days = 100
+number_of_supervisor_periods = 3
+
+[material_to_period]
+nmat = 0
+smat = 0
+cmat = 2
+pmat = 3
+wmat = 3
+
 [strategic]
 id = "strategic"
 asset = "Df"
@@ -23,11 +36,11 @@ material_to_period.cmat = 2
 material_to_period.pmat = 3
 material_to_period.wmat = 3
 
- 
+
 [[supervisors]]
 id = "main"
 number_of_supervisor_periods = 3
-assets = [ "Df" ]
+assets = ["Df"]
 supervisor_options.number_of_removed_work_orders = 15
 
 # [[supervisors]]
@@ -37,19 +50,19 @@ supervisor_options.number_of_removed_work_orders = 15
 ################################
 [[operational]]
 id = "OP-01-001"
-resources = [ "MTN-MECH", "MTN-ELEC", "PRODTECH" ]
+resources = ["MTN-MECH", "MTN-ELEC", "PRODTECH"]
 hours_per_day = 81.0
 operational_options.number_of_removed_work_orders = 15
-operational_configuration.off_shift_interval = { start = "19:00:00",  end = "07:00:00" }
+operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
 operational_configuration.availability.start_date = "2025-01-13T07:00:00Z"
 operational_configuration.availability.finish_date = "2025-01-27T15:00:00Z"
-assets = [ "Df" ]
+assets = ["Df"]
 
 [[operational]]
 id = "OP-01-002"
-resources = [ "MTN-MECH", "MTN-ELEC", "MTN-INST" ]
+resources = ["MTN-MECH", "MTN-ELEC", "MTN-INST"]
 hours_per_day = 81.0
 operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
@@ -57,11 +70,11 @@ operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
 operational_configuration.availability.start_date = "2025-01-13T07:00:00Z"
 operational_configuration.availability.finish_date = "2025-01-27T15:00:00Z"
-assets = [ "Df" ]
+assets = ["Df"]
 
 [[operational]]
 id = "OP-01-003"
-resources = [ "MTN-LAGG", "MTN-SCAF", "MTN-RIGG" ]
+resources = ["MTN-LAGG", "MTN-SCAF", "MTN-RIGG"]
 hours_per_day = 81.0
 operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
@@ -69,4 +82,96 @@ operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
 operational_configuration.availability.start_date = "2025-01-13T07:00:00Z"
 operational_configuration.availability.finish_date = "2025-01-27T15:00:00Z"
-assets = [ "Df" ]
+assets = ["Df"]
+[wdf_priority_map]
+
+"1" = 500
+
+"2" = 50
+
+"3" = 5
+
+"4" = 1
+
+"5" = 1
+
+"6" = 1
+
+"7" = 1
+
+"8" = 1
+
+
+[wgn_priority_map]
+
+"1" = 500
+
+"2" = 50
+
+"3" = 5
+
+"4" = 1
+
+"5" = 1
+
+"6" = 1
+
+"7" = 1
+
+"8" = 1
+
+
+[wpm_priority_map]
+
+"A" = 500
+
+"B" = 50
+
+"C" = 5
+
+"D" = 1
+
+
+[vis_priority_map]
+
+"V" = 100
+
+"I" = 10
+
+"S" = 10
+
+
+[order_type_weights]
+
+"WDF" = 10
+
+"WGN" = 8
+
+"WPM" = 5
+
+"Other" = 0
+
+
+[status_weights]
+
+"SECE" = 7500
+
+"PCNF_NMAT_SMAT" = 1500
+
+"AWSC" = 10000
+
+
+[clustering_weights]
+
+"asset" = 10
+
+"sector" = 5
+
+"system" = 2
+
+"subsystem" = 2
+
+"equipment_tag" = 1
+
+
+operating_time = 6
