--- a/crates/ordinator-api-server/Cargo.toml
+++ b/crates/ordinator-api-server/Cargo.toml
@@ -6,6 +6,10 @@ edition = "2024"
 [dependencies]
 ordinator-orchestrator = { path = "../ordinator-orchestrator" }
 
+axum = "*"
+axum-server = "*"
+tower = "*"
+tower-http = { version = "*", features = ["fs"]}
 actix-files = { workspace = true}
 actix-rt = { workspace = true }
 actix-web = { workspace = true }
