--- a/crates/ordinator-orchestrator/Cargo.toml
+++ b/crates/ordinator-orchestrator/Cargo.toml
@@ -23,6 +23,7 @@ dotenvy = { workspace = true}
 serde = {workspace = true}
 serde_json ={ workspace = true}
 
+tokio = {workspace = true}
 tracing = {workspace = true}
 tracing-appender = {workspace = true}
 tracing-flame = {workspace = true}
