--- a/temp_scheduling_environment_database/actor_specifications/actor_specification_hd.toml
+++ b/temp_scheduling_environment_database/actor_specifications/actor_specification_hd.toml
@@ -12,9 +12,7 @@ wmat = 3
 
 [strategic]
 number_of_strategic_periods = 52
-id.resources = []
-id.id = "strategic"
-id.assets ["Df"]
+id.assets ["DF"]
 strategic_options.number_of_removed_work_orders = 25
 strategic_options.urgency_weight = 1
 strategic_options.resource_penalty_weight = 1000000
@@ -27,9 +25,8 @@ material_to_period.wmat = 3
 
 [tactical]
 number_of_tactical_periods =4
-id.resources = []
-id.id = "tactical"
-id.assets ["Df"]
+id = [ "strategic", [], "tactical" ]
+id.assets ["DF"]
 tactical_options.number_of_removed_work_orders = 25
 tactical_options.urgency = 1
 tactical_options.resource_penalty = 10000000
