--- a/temp_scheduling_environment_database/actor_specifications/actor_specification_test.toml
+++ b/temp_scheduling_environment_database/actor_specifications/actor_specification_test.toml
@@ -1,4 +1,3 @@
-id.id.resources = []
 
 [material_to_period]
 nmat = 0
@@ -9,9 +8,8 @@ wmat = 3
 
 [strategic]
 number_of_strategic_periods = 52
-id.resources = []
-id.id = "strategic"
-is.assets ["Df"]
+id = [ [], "strategic", [] ]
+is.assets ["DF"]
 strategic_options.number_of_removed_work_orders = 25
 strategic_options.urgency_weight = 1
 strategic_options.resource_penalty_weight = 1000000
@@ -24,9 +22,7 @@ material_to_period.wmat = 3
 
 [tactical]
 number_of_tactical_periods =4
-id.resources = []
-id.id = "tactical"
-is.assets ["Df"]
+is.assets ["DF"]
 tactical_options.number_of_removed_work_orders = 25
 tactical_options.urgency = 1
 tactical_options.resource_penalty = 10000000
@@ -38,21 +34,15 @@ material_to_period.wmat = 3
 
 
 [[supervisors]]
-id.id = "main"
+id = [ "tactical", [], "main" ]
 number_of_supervisor_periods = 3
-id.resources = []
-id.id.resources = []
-id.assets = ["Df"]
+id = [ [], [], ["DF"] ]
 supervisor_options.number_of_removed_work_orders = 15
 
-# [[supervisors]]
-# id.id = "supervisor-second"
 ################################
 ###          MTN-ELEC        ###
 ################################
 [[operational]]
-id.id = "OP-01-001"
-id.resources = ["MTN-MECH", "MTN-ELEC", "PRODTECH"]
 hours_per_day = 81.0
 operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
@@ -60,11 +50,9 @@ operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
 operational_configuration.availability.start_date = "2025-01-13T07:00:00Z"
 operational_configuration.availability.finish_date = "2025-01-27T15:00:00Z"
-id.assets = ["Df"]
+id = [ "OP-01-001", ["MTN-MECH",, ["DF"] ]
 
 [[operational]]
-id.id = "OP-01-002"
-id.resources = ["MTN-MECH", "MTN-ELEC", "MTN-INST"]
 hours_per_day = 81.0
 operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
@@ -72,11 +60,9 @@ operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
 operational_configuration.availability.start_date = "2025-01-13T07:00:00Z"
 operational_configuration.availability.finish_date = "2025-01-27T15:00:00Z"
-id.assets = ["Df"]
+id = [ "OP-01-002", ["MTN-MECH",, ["DF"] ]
 
 [[operational]]
-id.id = "OP-01-003"
-id.resources = ["MTN-LAGG", "MTN-SCAF", "MTN-RIGG"]
 hours_per_day = 81.0
 operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
@@ -84,7 +70,7 @@ operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
 operational_configuration.availability.start_date = "2025-01-13T07:00:00Z"
 operational_configuration.availability.finish_date = "2025-01-27T15:00:00Z"
-id.assets = ["Df"]
+id = [ "OP-01-003", ["MTN-LAGG",, ["DF"] ]
 [wdf_priority_map]
 
 "1" = 500
