--- a/crates/ordinator-actors/ordinator-operational-actor/Cargo.toml
+++ b/crates/ordinator-actors/ordinator-operational-actor/Cargo.toml
@@ -18,6 +18,7 @@ proptest = {workspace = true}
 rand = {workspace = true}
 serde = {workspace = true}
 tracing = {workspace = true}
+flume = { workspace = true}
 
 [dev-dependencies]
 mockall = {workspace = true}
