--- a/crates/ordinator-actors/ordinator-strategic-actor/Cargo.toml
+++ b/crates/ordinator-actors/ordinator-strategic-actor/Cargo.toml
@@ -20,3 +20,4 @@ rand = {workspace = true}
 serde = {workspace = true}
 strum = { workspace = true }
 tracing = {workspace = true}
+flume = { workspace = true}
