--- a/crates/ordinator-actors/ordinator-tactical-actor/Cargo.toml
+++ b/crates/ordinator-actors/ordinator-tactical-actor/Cargo.toml
@@ -20,3 +20,5 @@ rand = {workspace = true}
 serde = {workspace = true}
 strum = { workspace = true }
 tracing = {workspace = true}
+
+flume = { workspace = true}
