--- a/crates/ordinator-api-server/Cargo.toml
+++ b/crates/ordinator-api-server/Cargo.toml
@@ -14,6 +14,8 @@ tower-http = { version = "*", features = ["fs"]}
 # actix-rt = { workspace = true }
 # actix-web = { workspace = true }
 anyhow = { workspace = true }
+thiserror = { workspace = true }
 dotenvy = { workspace = true }
 tokio = { workspace = true }
 tracing = { workspace = true }
+serde_json = {workspace = true}
