--- a/crates/ordinator-orchestrator/Cargo.toml
+++ b/crates/ordinator-orchestrator/Cargo.toml
@@ -22,6 +22,7 @@ arc-swap = {workspace = true}
 dotenvy = { workspace = true}
 serde = {workspace = true}
 serde_json ={ workspace = true}
+flume = {workspace = true}
 
 tokio = {workspace = true}
 tracing = {workspace = true}
